syntax = "proto3";
option java_multiple_files = true;
package com.shenjiahuan;

message PutOrDeleteRequest {
  int32 clientVersion = 1;
  string key = 2;
  string value = 3;
  bool delete = 4;
  int64 clientId = 5;
  int64 requestId = 6;
}

message PutOrDeleteResponse {
  int32 status = 1;
}

message GetRequest {
  int32 clientVersion = 1;
  string key = 2;
}

message GetResponse {
  int32 status = 1;
  string value = 2;
}

message PullRequest {
  int32 version = 1;
  string shards = 2;
}

message PullResponse {
  int32 status = 1;
  int32 version = 2;
  string data = 3;
}

service ShardService {
  rpc put(PutOrDeleteRequest) returns (PutOrDeleteResponse);
  rpc get(GetRequest) returns (GetResponse);
  rpc pull(PullRequest) returns (PullResponse);
}
